// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BarMenuItem /> should render its css w/ props active 1`] = `
.c0 {
  color: #00BBEF;
  font-size: 18px;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 2px 12px 3px;
  margin: 0 2px;
  color: #fff;
  background-color: #00BBEF;
  border-radius: 100px;
  pointer-events: none;
}

.c0:hover {
  background-color: rgb(240,240,240);
  border-radius: 100px;
}

.c0:last-child {
  margin-right: 0;
}

<HashLink
  active={true}
  className="c0"
  theme={
    Object {
      "brand": "#00BBEF",
    }
  }
  to="/"
/>
`;

exports[`<BarMenuItem /> should render its css w/ props color 1`] = `
.c0 {
  color: #fff;
  font-size: 18px;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 2px 12px 3px;
  margin: 0 2px;
}

.c0:hover {
  background-color: rgb(240,240,240);
  border-radius: 100px;
}

.c0:last-child {
  margin-right: 0;
}

<HashLink
  className="c0"
  color="#fff"
  theme={
    Object {
      "brand": "#00BBEF",
    }
  }
  to="/"
/>
`;

exports[`<BarMenuItem /> should render its css w/ props theme 1`] = `
.c0 {
  color: #00BBEF;
  font-size: 18px;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 2px 12px 3px;
  margin: 0 2px;
}

.c0:hover {
  background-color: rgb(240,240,240);
  border-radius: 100px;
}

.c0:last-child {
  margin-right: 0;
}

<HashLink
  className="c0"
  theme={
    Object {
      "brand": "#00BBEF",
    }
  }
  to="/"
/>
`;

exports[`<BarMenuItem /> should render its function w/ props to 1`] = `
.c0 {
  color: #00BBEF;
  font-size: 18px;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 2px 12px 3px;
  margin: 0 2px;
}

.c0:hover {
  background-color: rgb(240,240,240);
  border-radius: 100px;
}

.c0:last-child {
  margin-right: 0;
}

<HashLink
  className="c0"
  theme={
    Object {
      "brand": "#00BBEF",
    }
  }
  to="/"
/>
`;

exports[`<LandingMenu /> should render its css w/ props color 1`] = `
.c0 {
  height: 100%;
  color: #fff;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

@media (max-width:64em) {
  .c0 {
    padding: 0 20px;
  }
}

@media (max-width:41.6875em) {
  .c0 {
    overflow: visible;
  }

  .c0 nav {
    display: none;
  }
}

<Container__ContainerFlex
  className="c0"
  color="#fff"
/>
`;

exports[`<LandingMenu /> should render its css w/ props maxWidth 1`] = `
.c0 {
  height: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

@media (max-width:64em) {
  .c0 {
    padding: 0 20px;
  }
}

@media (max-width:41.6875em) {
  .c0 {
    overflow: visible;
  }

  .c0 nav {
    display: none;
  }
}

<Container__ContainerFlex
  className="c0"
  maxWidth="100px"
/>
`;

exports[`<LandingMenu /> should render its css w/ props openNav 1`] = `
.c0 {
  height: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

@media (max-width:64em) {
  .c0 {
    padding: 0 20px;
  }
}

@media (max-width:41.6875em) {
  .c0 {
    overflow: visible;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    position: fixed;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    padding: 60px 20px;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: space-around;
    -webkit-justify-content: space-around;
    -ms-flex-pack: space-around;
    justify-content: space-around;
    background-color: rgba(255,255,255,0.95);
  }

  .c0 nav {
    display: none;
  }

  .c0 nav {
    display: block;
  }

  .c0 nav a {
    display: block;
    margin: 40px auto;
    font-size: 21px;
    text-align: center;
    padding: 6px 22px;
  }
}

<Container__ContainerFlex
  className="c0"
  openNav={true}
/>
`;

exports[`<LandingMenuBar /> should render its ccs w/ props active true if loadedPath === post.directionmatches the actual path 1`] = `
<LandingMenuBar__MenuBar>
  <LandingMenuBar__LandingMenu
    className="LandingMenu"
  >
    <ClearLink
      onClick={[Function]}
      to="/"
    >
      <LandingMenuBar__Logo
        configuration={
          Object {
            "blocco": false,
            "disciplinaId": 21,
            "hasClassi": false,
            "homePage": "/",
            "product": "landingalatin",
            "titoloApplicazione": "Alatin Academy",
          }
        }
      />
    </ClearLink>
    <nav>
      <LandingMenuBar__BarMenuItem
        active={1}
        key="1"
        onClick={[Function]}
        theme={
          Object {
            "brand": "#00BBEF",
          }
        }
        to="/alatin-academy"
      >
        Academy
      </LandingMenuBar__BarMenuItem>
      <LandingMenuBar__BarMenuItem
        active={0}
        key="2"
        onClick={[Function]}
        theme={
          Object {
            "brand": "#00BBEF",
          }
        }
        to="/alatin-lyceum"
      >
        Lyceum
      </LandingMenuBar__BarMenuItem>
      <LandingMenuBar__BarMenuItem
        active={0}
        key="3"
        onClick={[Function]}
        theme={
          Object {
            "brand": "#00BBEF",
          }
        }
        to="/formazione"
      >
        Formazione
      </LandingMenuBar__BarMenuItem>
      <LandingMenuBar__BarMenuItem
        active={0}
        key="4"
        onClick={[Function]}
        theme={
          Object {
            "brand": "#00BBEF",
          }
        }
        to="/#prezzi"
      >
        Prezzi
      </LandingMenuBar__BarMenuItem>
      <LandingMenuBar__BarMenuItem
        active={0}
        key="5"
        onClick={[Function]}
        theme={
          Object {
            "brand": "#00BBEF",
          }
        }
        to="#"
      >
        FAQ
      </LandingMenuBar__BarMenuItem>
    </nav>
    <LandingMenuBar__MobileNavBtn
      esecuzione={true}
      onClick={[Function]}
    >
      <Svg
        height="20px"
        path={
          <path
            d="M0 0h24v2H0zM0 18h24v2H0zM0 9h24v2H0z"
            fillRule="evenodd"
          />
        }
        viewBox="0 0 24 20"
        width="24px"
      />
    </LandingMenuBar__MobileNavBtn>
  </LandingMenuBar__LandingMenu>
</LandingMenuBar__MenuBar>
`;

exports[`<LandingMenuBar /> should render its children w/ navigation[APPLICATION] 1`] = `
<LandingMenuBar__MenuBar>
  <LandingMenuBar__LandingMenu
    className="LandingMenu"
  >
    <ClearLink
      onClick={[Function]}
      to="/"
    >
      <LandingMenuBar__Logo
        configuration={
          Object {
            "blocco": false,
            "disciplinaId": 21,
            "hasClassi": false,
            "homePage": "/",
            "product": "landingalatin",
            "titoloApplicazione": "Alatin Academy",
          }
        }
      />
    </ClearLink>
    <nav>
      <LandingMenuBar__BarMenuItem
        active={0}
        key="1"
        onClick={[Function]}
        theme={
          Object {
            "brand": "#00BBEF",
          }
        }
        to="/alatin-academy"
      >
        Academy
      </LandingMenuBar__BarMenuItem>
      <LandingMenuBar__BarMenuItem
        active={0}
        key="2"
        onClick={[Function]}
        theme={
          Object {
            "brand": "#00BBEF",
          }
        }
        to="/alatin-lyceum"
      >
        Lyceum
      </LandingMenuBar__BarMenuItem>
      <LandingMenuBar__BarMenuItem
        active={0}
        key="3"
        onClick={[Function]}
        theme={
          Object {
            "brand": "#00BBEF",
          }
        }
        to="/formazione"
      >
        Formazione
      </LandingMenuBar__BarMenuItem>
      <LandingMenuBar__BarMenuItem
        active={0}
        key="4"
        onClick={[Function]}
        theme={
          Object {
            "brand": "#00BBEF",
          }
        }
        to="/#prezzi"
      >
        Prezzi
      </LandingMenuBar__BarMenuItem>
      <LandingMenuBar__BarMenuItem
        active={0}
        key="5"
        onClick={[Function]}
        theme={
          Object {
            "brand": "#00BBEF",
          }
        }
        to="#"
      >
        FAQ
      </LandingMenuBar__BarMenuItem>
    </nav>
    <LandingMenuBar__MobileNavBtn
      esecuzione={true}
      onClick={[Function]}
    >
      <Svg
        height="20px"
        path={
          <path
            d="M0 0h24v2H0zM0 18h24v2H0zM0 9h24v2H0z"
            fillRule="evenodd"
          />
        }
        viewBox="0 0 24 20"
        width="24px"
      />
    </LandingMenuBar__MobileNavBtn>
  </LandingMenuBar__LandingMenu>
</LandingMenuBar__MenuBar>
`;

exports[`<LandingMenuBar /> should render its css w/ props bgcolor 1`] = `
<LandingMenuBar__MenuBar
  bgcolor="#fff"
>
  <LandingMenuBar__LandingMenu
    className="LandingMenu"
  >
    <ClearLink
      onClick={[Function]}
      to="/"
    >
      <LandingMenuBar__Logo
        configuration={
          Object {
            "blocco": false,
            "disciplinaId": 21,
            "hasClassi": false,
            "homePage": "/",
            "product": "landingalatin",
            "titoloApplicazione": "Alatin Academy",
          }
        }
      />
    </ClearLink>
    <nav />
    <LandingMenuBar__MobileNavBtn
      esecuzione={true}
      onClick={[Function]}
    >
      <Svg
        height="20px"
        path={
          <path
            d="M0 0h24v2H0zM0 18h24v2H0zM0 9h24v2H0z"
            fillRule="evenodd"
          />
        }
        viewBox="0 0 24 20"
        width="24px"
      />
    </LandingMenuBar__MobileNavBtn>
  </LandingMenuBar__LandingMenu>
</LandingMenuBar__MenuBar>
`;

exports[`<LandingMenuBar /> should render its css w/ props openNav 1`] = `
<LandingMenuBar__MenuBar
  openNav={true}
>
  <LandingMenuBar__LandingMenu
    className="LandingMenu"
    openNav={true}
  >
    <ClearLink
      onClick={[Function]}
      to="/"
    >
      <LandingMenuBar__Logo
        configuration={
          Object {
            "blocco": false,
            "disciplinaId": 21,
            "hasClassi": false,
            "homePage": "/",
            "product": "landingalatin",
            "titoloApplicazione": "Alatin Academy",
          }
        }
      />
    </ClearLink>
    <nav />
    <LandingMenuBar__MobileNavBtn
      esecuzione={true}
      onClick={[Function]}
    >
      <Svg
        height="20px"
        path={
          <path
            d="M23.557 20l14.665 14.665L40 36.443 36.443 40l-1.778-1.778L20 23.557 5.335 38.222 3.557 40 0 36.443l1.778-1.778L16.443 20 1.778 5.335 0 3.557 3.557 0l1.778 1.778L20 16.443 34.665 1.778 36.443 0 40 3.557l-1.778 1.778L23.557 20z"
            fillRule="evenodd"
          />
        }
        viewBox="0 0 40 40"
        width="20px"
      />
    </LandingMenuBar__MobileNavBtn>
  </LandingMenuBar__LandingMenu>
</LandingMenuBar__MenuBar>
`;

exports[`<Logo /> should render its css w/ props start 1`] = `
<LogoLanding
  className="xJzfW"
  configuration={
    Object {
      "blocco": false,
      "disciplinaId": 21,
      "hasClassi": false,
      "homePage": "/",
      "product": "landingalatin",
      "titoloApplicazione": "Alatin Academy",
    }
  }
  start={true}
/>
`;

exports[`<MenuBar /> should render its css w/ props bgcolor 1`] = `
.c0 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 52px;
  background-color: #fff;
  box-shadow: 0 1px 4px rgba(0,0,0,0.1);
  z-index: 8;
  -webkit-transition: all 0.5s;
  transition: all 0.5s;
}

.c0 * {
  -webkit-transition: all 0.5s;
  transition: all 0.5s;
}

<header
  className="c0"
/>
`;

exports[`<MenuBar /> should render its css w/ props openNav 1`] = `
.c0 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 52px;
  background-color: rgba(255,255,255,0.95);
  box-shadow: 0 1px 4px rgba(0,0,0,0.1);
  z-index: 8;
  -webkit-transition: all 0.5s;
  transition: all 0.5s;
}

.c0 * {
  -webkit-transition: all 0.5s;
  transition: all 0.5s;
}

@media (max-width:41.6875em) {
  .c0 {
    background: none;
    overflow: visible;
  }
}

<header
  className="c0"
/>
`;

exports[`<MenuBar /> should render its css w/ props start 1`] = `
.c0 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 52px;
  background-color: rgba(255,255,255,0.95);
  box-shadow: 0 1px 4px rgba(0,0,0,0.1);
  z-index: 8;
  -webkit-transition: all 0.5s;
  transition: all 0.5s;
}

.c0 * {
  -webkit-transition: all 0.5s;
  transition: all 0.5s;
}

@media (min-width:41.75em) {
  .c0 {
    height: 96px;
    box-shadow: none;
  }
}

<header
  className="c0"
  start={true}
/>
`;
